--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
         <title>Baston</title>
     </head>
     <body>
-        
+        <form id="creation" method="get" target="?" name="creation" >
+            <fieldset>
+                <legend>Création de personnage</legend>
+                <label>Nom du personnage: </label><input id="name" type="text" name="Nom" /><br/>
+                <br/>
+                <fieldset>
+                    <legend>Caractéristiques</legend>
+                    <div>
+                        <p>Il vous reste <span id="attPoints">15</span> points à répartir entre les 3 caractéristiques suivantes:</p>
+                    </div>
+                    <div id="str">
+                        <label>Force: </label>
+                    </div>
+                    <div id="end">
+                        <label>Endurance: </label>
+                    </div>
+                    <div id="agi">
+                        <label>Agilité: </label>
+                    </div>
+                </fieldset>
+            </fieldset>
+        </form>
+        <script src="function.js"></script>
     </body>
 </html>
