--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Baston</title>
     </head>
     <body>
-        <form id="creation" method="get" target="?" name="creation" >
+        <form id="creation" method="get" target="?" name="creation" onsubmit="new Perso()" >
             <fieldset>
                 <legend>Création de personnage</legend>
                 <label>Nom du personnage: </label><input id="name" type="text" name="Nom" /><br/>
