--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             </fieldset>
         </form>
         <script src="./js/Perso.js"></script>
+        <script src="./js/Joueur.js"></script>
+        <script src="./js/Monstre.js"></script>
         <script src="./js/script.js"></script>
     </body>
 </html>
