--- a/index.html
+++ b/index.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Baston</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
-    <body>
-        <form id="creation" method="get" target="?" name="creation">
+
+<head>
+    <title>Baston</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+    <form id="creation" method="get" target="?" name="creation">
+        <fieldset>
+            <legend>Création de personnage</legend>
+            <label>Nom du personnage: </label><input id="name" type="text" name="Nom" placeholder="Nom du perso ..." /><br/>
+            <br/>
             <fieldset>
-                <legend>Création de personnage</legend>
-                <label>Nom du personnage: </label><input id="name" type="text" name="Nom" placeholder="Nom du perso ..."/><br/>
-                <br/>
-                <fieldset>
-                    <legend>Caractéristiques</legend>
-                    <div>
-                        <p>Il vous reste <span id="attPoints">15</span> points à répartir entre les 3 caractéristiques suivantes:</p>
-                    </div>
-                    <div id="str">
-                        <label>Force: </label>
-                    </div>
-                    <div id="end">
-                        <label>Endurance: </label>
-                    </div>
-                    <div id="agi">
-                        <label>Agilité: </label>
-                    </div>
-                </fieldset>
+                <legend>Caractéristiques</legend>
+                <div>
+                    <p>Il vous reste <span id="attPoints">15</span> points à répartir entre les 3 caractéristiques suivantes:</p>
+                </div>
+                <div id="str">
+                    <label>Force: </label>
+                </div>
+                <div id="end">
+                    <label>Endurance: </label>
+                </div>
+                <div id="agi">
+                    <label>Agilité: </label>
+                </div>
             </fieldset>
-        </form>
-        <script src="./js/Perso.js"></script>
-        <script src="./js/Joueur.js"></script>
-        <script src="./js/Monstre.js"></script>
-        <script src="./js/script.js"></script>
-    </body>
+        </fieldset>
+    </form>
+    <script src="./js/Charac.js"></script>
+    <script src="./js/Player.js"></script>
+    <script src="./js/Monster.js"></script>
+    <script src="./js/script.js"></script>
+</body>
+
 </html>
