--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="./js/Charac.js"></script>
     <script src="./js/Player.js"></script>
     <script src="./js/Monster.js"></script>
+    <script src="./js/Display.js"></script>
     <script src="./js/Skills/NormalAttack.js"></script>
     <script src="./js/Skills/HeavyStrike.js"></script>
     <script src="./js/script.js"></script>
