room + random monsters

--- a/index.html
+++ b/index.html
@@ -35,13 +35,16 @@
         </fieldset>
         <input type="submit" name="start" value="Start" onclick="start()">
     </form>
-    <script src="./js/Charac.js"></script>
-    <script src="./js/Player.js"></script>
-    <script src="./js/Monster.js"></script>
-    <script src="./js/Display.js"></script>
-    <script src="./js/Skills/NormalAttack.js"></script>
-    <script src="./js/Skills/HeavyStrike.js"></script>
-    <script src="./js/script.js"></script>
+    <script type="text/javascript" src="./js/tools.js"></script>
+    <script type="text/javascript" src="./js/Charac.js"></script>
+    <script type="text/javascript" src="./js/Player.js"></script>
+    <script type="text/javascript" src="./js/Monster.js"></script>
+    <script type="text/javascript" src="./js/Display.js"></script>
+    <script type="text/javascript" src="./js/Skills/NormalAttack.js"></script>
+    <script type="text/javascript" src="./js/Skills/HeavyStrike.js"></script>
+    <script type="text/javascript" src="./js/monsters.js"></script>
+    <script type="text/javascript" src="./js/Room.js"></script>
+    <script type="text/javascript" src="./js/script.js"></script>
 </body>
 
 </html>
