--- a/index.html
+++ b/index.html
@@ -1,50 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>Baston</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
-</head>
+    <head>
+        <title>Baston</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="css/style.css" rel="stylesheet">
+    </head>
 
-<body>
-    <form id="creation" method="get" target="?" name="creation">
-        <fieldset>
-            <legend>Création de personnage</legend>
-            <label>Nom du personnage: </label><input id="name" type="text" name="Nom" placeholder="Nom du perso ..." /><br/>
-            <label>Sexe: </label>
-            <input type="radio" name="gender" value="M" checked> Homme
-            <input type="radio" name="gender" value="F"> Femme
-            <br/>
-            <fieldset>
-                <legend>Caractéristiques</legend>
-                <div>
-                    <p>Il vous reste <span id="attPoints">15</span> points à répartir entre les 3 caractéristiques suivantes:</p>
-                </div>
-                <div id="str">
-                    <label>Force: </label>
-                </div>
-                <div id="end">
-                    <label>Endurance: </label>
-                </div>
-                <div id="agi">
-                    <label>Agilité: </label>
-                </div>
-            </fieldset>
-        </fieldset>
-        <input type="submit" name="start" value="Start" onclick="start()">
-    </form>
-    <script type="text/javascript" src="./js/tools.js"></script>
-    <script type="text/javascript" src="./js/Charac.js"></script>
-    <script type="text/javascript" src="./js/Player.js"></script>
-    <script type="text/javascript" src="./js/Monster.js"></script>
-    <script type="text/javascript" src="./js/Display.js"></script>
-    <script type="text/javascript" src="./js/Skills/NormalAttack.js"></script>
-    <script type="text/javascript" src="./js/Skills/HeavyStrike.js"></script>
-    <script type="text/javascript" src="./js/monsters.js"></script>
-    <script type="text/javascript" src="./js/Room.js"></script>
-    <script type="text/javascript" src="./js/script.js"></script>
-</body>
+    <body>
+
+        <script type="text/javascript" src="./js/tools.js"></script>
+        <script type="text/javascript" src="./js/Form.js"></script>
+        <script type="text/javascript" src="./js/Charac.js"></script>
+        <script type="text/javascript" src="./js/Player.js"></script>
+        <script type="text/javascript" src="./js/Monster.js"></script>
+        <script type="text/javascript" src="./js/Display.js"></script>
+        <script type="text/javascript" src="./js/Skills/NormalAttack.js"></script>
+        <script type="text/javascript" src="./js/Skills/HeavyStrike.js"></script>
+        <script type="text/javascript" src="./js/monsters.js"></script>
+        <script type="text/javascript" src="./js/Room.js"></script>
+        <script type="text/javascript" src="./js/script.js"></script>
+    </body>
+
 
 </html>
