--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
 
         <script type="text/javascript" src="./js/tools.js"></script>
+        <script type="text/javascript" src="./js/textversion.js"></script>
         <script type="text/javascript" src="./js/Form.js"></script>
         <script type="text/javascript" src="./js/Charac.js"></script>
         <script type="text/javascript" src="./js/Player.js"></script>
