monsters are know constructed directly from JS objects (monsters.js)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <script type="text/javascript" src="./js/Skills/NormalAttack.js"></script>
         <script type="text/javascript" src="./js/Skills/HeavyStrike.js"></script>
         <script type="text/javascript" src="./js/monsters.js"></script>
-        <script type="text/javascript" src="./js/Room.js"></script>
+        <script type="text/javascript" src="./js/Cell.js"></script>
         <script type="text/javascript" src="./js/script.js"></script>
     </body>
 
