--- a/test.html
+++ b/test.html
@@ -14,8 +14,8 @@
         <script>
             var randomMonster = monsters.ilvl[1][(Object.keys(monsters.ilvl[1]))[Math.floor(Math.random() * (Object.keys(
                 monsters.ilvl[1])).length)]];
-            console.log(monsters)
-            console.log(randomMonster)
+            console.log(monsters);
+            console.log(randomMonster);
         </script>
 
 
