fix gender label

--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <title>Baston</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
+<head>
+    <title>Baston</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="css/style.css" rel="stylesheet">
+</head>
 
-    <body>
+<body>
 
-        <script type="text/javascript" src="./js/tools.js"></script>
-        <script type="text/javascript" src="./js/textversion.js"></script>
-        <script type="text/javascript" src="./js/Form.js"></script>
-        <script type="text/javascript" src="./js/Charac.js"></script>
-        <script type="text/javascript" src="./js/Player.js"></script>
-        <script type="text/javascript" src="./js/Monster.js"></script>
-        <script type="text/javascript" src="./js/Display.js"></script>
-        <script type="text/javascript" src="./js/Skills/NormalAttack.js"></script>
-        <script type="text/javascript" src="./js/Skills/HeavyStrike.js"></script>
-        <script type="text/javascript" src="./js/monsters.js"></script>
-        <script type="text/javascript" src="./js/Cell.js"></script>
-        <script type="text/javascript" src="./js/script.js"></script>
-    </body>
+    <script src="./js/tools.js"></script>
+    <script src="./js/textversion.js"></script>
+    <script src="./js/Form.js"></script>
+    <script src="./js/Charac.js"></script>
+    <script src="./js/Player.js"></script>
+    <script src="./js/Monster.js"></script>
+    <script src="./js/Display.js"></script>
+    <script src="./js/Skills/NormalAttack.js"></script>
+    <script src="./js/Skills/HeavyStrike.js"></script>
+    <script src="./js/monsters.js"></script>
+    <script src="./js/Cell.js"></script>
+    <script src="./js/script.js"></script>
+</body>
 
 
 </html>
